--- a/asobi.html
+++ b/asobi.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/fav.jpeg">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/earlyaccess/nikukyu.css" rel="stylesheet">
-    <title>八幡山公園</title>
+    <title>ご意見・お問い合わせ</title>
 </head>
-
 <body>
     <span id="main_images"><a href="index.html"><img src="images/pop2.jpg"></a></span>
     <div id="nav">
@@ -19,7 +17,6 @@
             <li><a href="info.html">公園について</a></li>
             <li><a href="inquiry.html">お問い合わせ</a></li>
         </ul>
-    </div>
     </div>
     <div id="main">
         <h1 id="taitle">遊び方</h1>
@@ -53,20 +50,22 @@
                 </div>
             </div>
             <div style="clear: both;"></div>
-            <p><span id="mappdf"><a href="images/panf_map.pdf">八幡山公園散歩マップのダウンロード（PDF 331KB）</a></span>
-                <span id="gaidepdf"><a href="images/panf_guide.pdf">ガイドマップのダウンロード（PDF 619KB）</a></span>
-            </p>
+            <div id="map">
+                <p><span id="mappdf"><a href="images/panf_map.pdf">八幡山公園散歩マップのダウンロード（PDF 331KB）</a></span>
+                    <span id="gaidepdf"><a href="images/panf_guide.pdf">ガイドマップのダウンロード（PDF 619KB）</a></span>
+                </p>
+            </div>
+            
         </div>
     </div>
 
     <footer>
         <p>Copyright © 2024 八幡山公園<br>
-            〒320-0027<br>
-            宇都宮市塙田5-1-1<br>
-            電話：028-624-0642<br>
-            ＦＡＸ：028-622-6002</p>
+        〒320-0027<br>
+        宇都宮市塙田5-1-1<br>
+        電話：028-624-0642<br>
+        ＦＡＸ：028-622-6002</p>
     </footer>
     <script src="hacti.js"></script>
 </body>
-
 </html>
